--- a/PlottedAssist/Views/PlantInfo/WildlifeTips.cshtml
+++ b/PlottedAssist/Views/PlantInfo/WildlifeTips.cshtml
@@ -3,16 +3,18 @@
     ViewBag.Title = "WildlifeTips";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="row" style="background-color:#4F6657;">
+        <!--Header-->
         <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
         </div>
-        <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+        <!--Button-->
+        <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;margin-top:5%">
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
         </div>
-        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
+        <!--Text part-->
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"  style="margin-top:50px;padding-bottom:80px;">
             <h2 class="white-word">Attracting Native Birds to Your garden</h2>
             <p class="white-word">
                 Essentially, a backyard brimming with botanic biodiversity is the one most likely to attract a variety of birds, especially if the plants are locally native. We’re not suggesting you rush out and plant a whole swathe of enormous gum trees, although having some of these nearby does indeed help encourage the birds. The most important element of planting a bird habitat is to make sure all strata layers are accounted for.  Strata layers are the different layers of vegetation that essentially make up a habitat. As different birds (and other animals) live in different layers of vegetation, the more variety you can provide in the size and selection of plants you grow, the greater the variety of animals you may see turning up at your place. Different vegetation levels provide a diverse supply of food, shelter, and safe spaces for birds, so consider a decent mix of ground covers, grasses, shrubs of varying sizes, and a couple of locally native tree species.<br><br>
@@ -42,7 +44,8 @@
                 <li>Many small birds build their nests using spider webs, fur, fibers, and grass collected from various places. Keep an eye out for birds collecting nesting material and secure any plastics in which they can become entangled.</li>
             </ul>
         </div>
-        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+        <!--Next page button-->
+        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-5 col-sm-offset-8 col-md-offset-9 col-lg-offset-10" style="margin-bottom:75px">
             <a href="@Url.Content("~/PlantInfo/PlantTech")" class="btn btn-success">Next: Planting Techniques</a>
         </div>
-    </div>
+    
