--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -20,8 +20,8 @@
 
 <div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;margin-bottom:70px;">
         <h2>Add to My Garden List</h2>
-        <p>When you successfully add the plant to your list, you frequency timer will start.</p>
-        <p>Set 0 for the frequency which you do not want to use</p>
+        <p>When you successfully add the plant to your list, your frequency timer will start.</p>
+        <p>Set 0 for the frequency which you do not want to use.</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
