--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -2,93 +2,100 @@
     ViewBag.Title = "Home Page";
 }
 
-    <div class="row" style="background-color:#4F6657;">
+<!--Header-->
+<div class="row" style="padding:0;background:url(../Picture/homepage_header.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%">
+    <div>
+        <img src="~/Picture/Banner/Homepage_title.png" style="width:35%;margin-top:15%;margin-left:33%">
+    </div>
+</div>
 
-        <!--Header-->
-        <div class="row" style="padding:0;background:url(../Picture/header_picture5.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%">
-            <div>
-                <img src="~/Picture/Banner/Homepage_title.png" style="width:35%;margin-top:15%;margin-left:33%">
+<!--body-->
+<div class="col-xs-12" style="margin-bottom:20px;text-align:center;background-color:#6D917A;">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+    <div class="col-xs-12 col-md-4" style="padding:30px;">
+        <h2 class="white-word">What is indigenous plants?</h2>
+        <p class="white-word">
+            Native plants are plants that grow in a particular country like Australia. Indigenous plants are native to Australia, most importantly they are natural to your local area.
+        </p>
+    </div>
+    <div class="col-xs-12 col-md-4" style="padding:30px">
+        <h2 class="white-word">Why indigenous plants?</h2>
+        <p class="white-word">
+            In recent years, our indigenous plants have been removed or outcompeted by exotic plants. Indigenous plants were and continue to be an important food source for our local wildlife. They are great to have because they are perfectly suited to the environment that they belong to. This means that they should survive on local weather and thrive in the local soil.
+        </p>
+    </div>
+    <div class="col-xs-12 col-md-4" style="padding:30px">
+        <h2 class="white-word">Indigenous plants also:</h2>
+        <p class="white-word">
+            - provide habitat, shelter, and food for local wildlife.<br>
+            - require less water and money.<br>
+            - support a healthy environment.<br>
+            - improve biodiversity.<br>
+            - are our heritage – we can help preserve them.<br>
+            - are attractive plants with less maintenance.<br>
+            - get less plant disease and more pest resistance.
+        </p>
+    </div>
+    </div>
+</div>
+<div class="col-xs-12 col-md-10 col-md-offset-1" style="margin-bottom:100px;text-align:center; ">
+    <!--Our Services-->
+    <h2 class="white-word col-xs-12" style="text-align:center;">Our Services</h2>
+    <div style="width:240px; height:6px; background-color:white;margin:0 auto;margin-top:60px;"></div>
+    <!--Guidance-->
+    <div class="col-xs-12" style="margin-top:80px;">
+        <div class="col-xs-12 col-md-5" style="margin:0 auto;">
+            <img src="~/Picture/InvasivePlantCard.jpg" style="width:450px;max-width: 100%;">
+        </div>
+        <div class="col-xs-12 col-md-7" style="min-height:300px;">
+            <div class="col-xs-12 col-md-8 col-md-offset-3 white-word" style="margin-top:30px; text-align:center;">
+                <h3 style="text-align:center;font-weight:bold">Invasive Plants</h3>
+                <p style="font-size:16px;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</p>
+                <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
+    </div>
 
-        <!--body-->
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1" style="border: 0px; margin-top: 5%; ">
-            <h2 class="white-word">What is an indigenous plant?</h2>
-            <p class="white-word">
-                Native plants are plants that grow in a particular country like Australia. Indigenous plants are native to Australia, most importantly they are natural to your local area.
-            </p>
-            <h2 class="white-word">Why plant indigenous plants?</h2>
-            <p class="white-word">
-                In recent years, our indigenous plants have been removed or outcompeted by exotic plants. Indigenous plants were and continue to be an important food source for our local wildlife. They are great to have because they are perfectly suited to the environment that they belong to. This means that they should survive on local weather and thrive in the local soil.
-            </p>
-            <h2 class="white-word">Indigenous plants also:</h2>
-            <ul class="white-word">
-                <li>provide habitat, shelter, and food for local wildlife.</li>
-                <li>require less water and money.</li>
-                <li>support a healthy environment.</li>
-                <li>improve biodiversity.</li>
-                <li>are our heritage – we can help preserve them.</li>
-                <li>are attractive plants with less maintenance. </li>
-                <li>get less plant disease and more pest resistance.</li>
-            </ul>
+    <div class="col-xs-12" style="margin-top:80px;">
+
+        <div class="col-xs-12 col-md-7" style="min-height:300px;">
+            <div class="col-xs-12 col-md-8 col-md-offset-1 white-word" style="margin-top:30px; text-align:center;">
+                <h3 style="text-align:center;font-weight:bold">Plant List</h3>
+                <p style="font-size:16px;">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</p>
+                <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+            </div>
         </div>
-        
-            <!--Our Services-->
-            
-                <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-12 col-lg-6 col-lg-offset-3" style="margin-bottom:75px">
-                    <h2 class="white-word" style="text-align:center">Our Services</h2>
-                    <!--Guidance-->
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border: 0px;margin-bottom: 100px;margin-top:30px">
-
-                        <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
-                            <br>
-                            <div style="text-align:center">
-                                <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:175px">
-                            </div>
-                            <br>
-                            <br>
-                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Invasive Plants</h3>
-                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
-                            <br>
-                            <div style="text-align:center">
-                                <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border:0px;margin-top:30px;margin-bottom:100px;">
-                        <div class="white-word" style="background: #1E2621; border: 0px; border-radius: 10px">
-                            <br>
-                            <div style="text-align:center">
-                                <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:175px">
-                            </div>
-                            <br>
-                            <br>
-                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">Plant List</h3>
-                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                            <br>
-                            <div style="text-align:center">
-                                <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;margin-top:20px;width:100px;height:30px;">Learn more </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-md-4 col-md-offset-0 col-lg-4 col-lg-offset-0" style="border: 0px;margin-top:30px;margin-bottom:100px;">
-                        <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
-                            <br>
-                            <div style="text-align:center">
-                                <img src="~/Picture/Icon/MyGarden.png" style="width: 60%; height: 175px">
-                            </div>
-                            <br>
-                            <br>
-                            <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center;font-weight:bold">My Garden</h3>
-                            <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
-                            <br>
-                            <div style="text-align:center">
-                                <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;margin-top:20px;width:100px;height:30px">Learn more </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        
+        <div class="col-xs-12 col-md-5" style="margin: 0 auto;">
+            <img src="~/Picture/IndigenousPlantCard.jpg" style="width:450px;max-width: 100%;">
         </div>
+    </div>
+
+    <div class="col-xs-12" style="margin-top:80px;">
+        <div class="col-xs-12 col-md-5" style="margin:0 auto;">
+            <img src="~/Picture/MyGardenCard.jpg" style="width:450px;max-width: 100%;">
+        </div>
+        <div class="col-xs-12 col-md-7" style="min-height:300px;">
+            <div class="col-xs-12 col-md-8 col-md-offset-3 white-word" style="margin-top:30px; text-align:center;">
+                <h3 style="text-align:center;font-weight:bold">My Garden</h3>
+                <p style="font-size:16px;">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</p>
+                <a class="btn btn-success" href="@Url.Content("~/DashBoard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xs-12" style="margin-top:80px;">
+
+        <div class="col-xs-12 col-md-7" style="min-height:300px;">
+            <div class="col-xs-12 col-md-8 col-md-offset-1 white-word" style="margin-top:30px; text-align:center;">
+                <h3 style="text-align:center;font-weight:bold">Gardening Guidance</h3>
+                <p style="font-size:16px;">Gain access to information that will improve your gardening experience. Understand different techniques that you can do by yourself to help your garden.</p>
+                <a class="btn btn-success" href="@Url.Content("~/PlantInfo/PlantInfo")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-5" style="margin:0 auto;">
+            <img src="~/Picture/GardeningGuidanceCard.jpg" style="width:450px;max-width: 100%;">
+        </div>
+    </div>
+
+
+</div>
