--- a/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
+++ b/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
@@ -22,7 +22,7 @@
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-            <div class="col-12 col-sm-6 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; position: relative;">
+            <div class="col-12 col-sm-6 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; margin-bottom:80px; position: relative;">
                 <div class="btn-group-lg" role="group" aria-label="..." style="margin-top:20px;position:relative">
                     <h4 class="white-word">Plant type</h4>
 
