--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -24,7 +24,7 @@
         <!--Plant information and picture-->
 
         <div style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)" style="margin-top:50px"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)" style="margin-top:50px"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
 
         
