--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -14,7 +14,7 @@
         </div>
         <!--weed information and picture-->
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
         <div class="col-xs-12 col-xs-offset-0 col-sm-6" style="margin-top:5%;position:relative;margin-bottom:75px">
             
