--- a/PlottedAssist/Views/PlantInfo/Benefits.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Benefits.cshtml
@@ -12,7 +12,7 @@
         </div>
     <!--Button-->
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;margin-top:30px">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
     <!--Content-->
         <div class="col-md-8 col-md-offset-2 col-sm-8 col-lg-offset-2" style="margin-top:70px;padding-bottom:80px;">
