--- a/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
+++ b/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
@@ -11,7 +11,7 @@
         </div>
         <!--Button-->
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;margin-top:5%">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
         <!--Text part-->
         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style="margin-top:50px;padding-bottom:80px;">
