--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -26,7 +26,7 @@
         margin-bottom: 5%">
         <div class="white-word" style="background:#344239;text-align:center;margin-top:10%;">
             <H3>Let us help you decide which plant to plant!</H3>           
-            <h1 style="font-size:16px;"><a href="@Url.Content("~/PlantSets/PlantList/")" style="color:#FDB298;text-decoration:underline">No thanks.Give me the list of all plants</a></h1>
+            <h1 style="font-size:16px;"><a href="@Url.Content("~/PlantSets/PlantList/")" style="color:#FDB298;text-decoration:underline">No thanks. Show me the list of all plants</a></h1>
         </div>
         <br>
         <br>
