--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -19,12 +19,12 @@
             </div>
         </div>
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
-            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; position: relative">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px;margin-bottom:80px; position: relative">
                 <div class="btn-group-lg" role="group" aria-label="..." style="margin-top:20px;position:relative">
                     <h4 class="white-word">Plant type</h4>
 
