--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -8,9 +8,9 @@
 
 <!--Header-->
 
-<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/MyGardenBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
     <div>
-        <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
+        <img src="~/Picture/Banner/MyGardenTitle.png" style="width:25%;margin-top:13%;margin-left:37%">
     </div>
 </div>
 
