--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";  
 }
 
-    <div class="row" style="background-color:#4F6657">
+    
 
         <!--Header-->
 
         <div class="col-12 col-md-12" style="        padding: 0;
-        background-image: url(../Picture/header_picture3.jpg);
+        background-image: url(../../Picture/Banner/IndigenousPlantBanner.jpg);
         width: 100%;
         margin: 0;
         padding-bottom: 10%;
@@ -45,4 +45,4 @@
                 </div>
             }
         </div>
-    </div>        
+            
